2008-07-21  Sankar P  <psankar@novell.com>

	Fixes Exchange related crashes due to DB Summary merge

	* camel/camel-exchange-folder.c: (search_by_expression),
	(camel_exchange_folder_construct):
	* camel/camel-exchange-search.c: (exchange_body_contains):

2008-07-16  Sankar P  <psankar@novell.com>

	Pushing changes that are necessary for disk-summary to work. 

	* camel/camel-exchange-folder.c (class_init),
	(camel_exchange_folder_construct), (exchange_sync):
	* camel/camel-exchange-summary.c (exchange_summary_class_init),
	(camel_exchange_summary_new), (summary_header_from_db),
	(summary_header_to_db), (message_info_from_db),
	(message_info_load), (message_info_to_db):

2008-06-30  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Rewrite the evolution-data-server version check and set it to
	require 2.23.5 for the new e-cal-check-timezones API.

2008-06-22  Patrick Ohly  <patrick.ohly@gmx.de>

	* calendar/e-cal-backend-exchange-calendar.c,
	calendar/e-cal-backend-exchange.c,
	calendar/e-cal-backend-exchange.h: Use e_cal_check_timezones() to
	match time zone definitions and handle conflicting definitions;
	requires a new utility function to look up time zone definitions
	cached in the backend (bug #52890).

2008-06-17  Johnny Jacob  <jjohnny@novell.com>

	* configure.in: Bumped to 2.23.5.

	* NEWS: Updates for Evolution Exchange 2.23.4

2008-06-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #402752

	* calendar/e-cal-backend-exchange.c: (get_exchange_comp),
	(e_cal_backend_exchange_add_object),
	(e_cal_backend_exchange_modify_object):
	* calendar/e-cal-backend-exchange-calendar.c: (add_ical):
	Prevent crash when got a component without set UID.

2008-06-07  Paul Smith  <psmith@gnu.org>

	** Fix for bug #532844

	* mail/mail-stub-exchange.c (get_message): If it's a bad case we can 
	just goto the error handling code instead of trying to process the 
	response.

2008-06-06  Matthew Barnes  <mbarnes@redhat.com>
